# limine-terminal-port

./: .gitignore  GNUmakefile  README.md  meson.build
fonts/: unifont.h  vgafont.h
kernel/: kernel.c  memory.c  memory.h
source/: gterm.c  gterm.cpp  gterm.h  gterm.hpp  image.c  image.cpp  image.h  image.hpp  term.c  term.cpp  term.h  term.hpp  tterm.c  tterm.cpp  tterm.h  tterm.hpp
source/cpp/: image.hpp  term.hpp
term-stivale2/: gterm.c  gterm.h  term.c  term.h
